Создание списка объектов изображений

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,188 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "from ImageElement import *\n",
+    "\n",
+    "print_info = True\n",
+    "\n",
+    "coco_dataset_path = 'COCO_dataset'\n",
+    "yolo_dataset_path = 'YOLO_dataset'\n",
+    "coco_annotations_path = os.path.join(coco_dataset_path, 'annotations')\n",
+    "coco_images_path = os.path.join(coco_dataset_path, 'images')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Осуществляется обработка instances_Train.json\n",
+      "Имеющиеся классы: {0: 'car', 1: 'peple'}\n",
+      "-----------------\n",
+      "\n",
+      "ImageElement info:\n",
+      " - path_image_initial: COCO_dataset\\images\\4.jpg\n",
+      " - path_label_initial: COCO_dataset\\annotations\\instances_Train.json\n",
+      " - img_width: 2000\n",
+      " - img_height: 1336\n",
+      " - image_id: 4\n",
+      " - type_data: train\n",
+      " - path_label_final: YOLO_dataset\\train\\labels\\4_jpg.png\n",
+      " - path_image_final: YOLO_dataset\\train\\images\\4_jpg.png\n",
+      " - classes_names: ['car', 'car', 'car', 'peple']\n",
+      " - classes_ids: [0, 0, 0, 1]\n",
+      " - point_list: [[134.18, 1032.9, 140.3, 1011.74, 163.69, 975.55, 201, 942.14, 237.75, 915.41, 345.22, 915.97, 385.86, 947.15, 400.34, 995.59, 397.56, 1038.47, 386.98, 1042.92, 364.15, 1034.01, 335.75, 1042.37, 327.95, 1061.86, 312.92, 1065.2, 282.85, 1047.93, 180, 1052.6, 140.2, 1067.3], [603.02, 943.19, 608.05, 919.6, 628.15, 893.31, 676.88, 892.53, 693.12, 899.11, 715.93, 895.63, 740.68, 887.12, 766.2, 888.28, 787.08, 882.09, 802.94, 882.09, 806.8, 873.97, 813.38, 864.69, 828.46, 867.78, 829.23, 881.32, 824.98, 891.76, 768.13, 922.69, 632.02, 951.31], [868.29, 913.03, 877.57, 896.01, 910.44, 895.63, 917.4, 916.51, 916.62, 931.2, 867.13, 934.29], [1030.37, 890.47, 1048.63, 885.63, 1056.69, 924.3, 1030.37, 936.39, 1027.15, 914.64]]\n",
+      "\n",
+      "ImageElement info:\n",
+      " - path_image_initial: COCO_dataset\\images\\5.jpg\n",
+      " - path_label_initial: COCO_dataset\\annotations\\instances_Train.json\n",
+      " - img_width: 3998\n",
+      " - img_height: 2666\n",
+      " - image_id: 5\n",
+      " - type_data: train\n",
+      " - path_label_final: YOLO_dataset\\train\\labels\\5_jpg.png\n",
+      " - path_image_final: YOLO_dataset\\train\\images\\5_jpg.png\n",
+      " - classes_names: ['peple', 'peple', 'peple', 'peple']\n",
+      " - classes_ids: [1, 1, 1, 1]\n",
+      " - point_list: [[1581.86, 2002.36, 1573.86, 1885.55, 1732.27, 1842.35, 2146.68, 1859.95, 2167.49, 1967.16, 1941.88, 1971.96], [2258.69, 2010.36, 2273.09, 1867.95, 2335.49, 1861.55, 2329.09, 2037.56], [2533.74, 2147.32, 2530.54, 1840.11, 2618.54, 1848.11, 2637.75, 2171.33], [2733.75, 2099.32, 2714.55, 1881.71, 2648.95, 1878.51, 2655.35, 2088.12]]\n",
+      "\n",
+      "Осуществляется обработка instances_Validation.json\n",
+      "Имеющиеся классы: {0: 'car', 1: 'peple'}\n",
+      "-----------------\n",
+      "\n",
+      "ImageElement info:\n",
+      " - path_image_initial: COCO_dataset\\images\\4.jpg\n",
+      " - path_label_initial: COCO_dataset\\annotations\\instances_Validation.json\n",
+      " - img_width: 2000\n",
+      " - img_height: 1336\n",
+      " - image_id: 4\n",
+      " - type_data: validation\n",
+      " - path_label_final: YOLO_dataset\\validation\\labels\\4_jpg.png\n",
+      " - path_image_final: YOLO_dataset\\validation\\images\\4_jpg.png\n",
+      " - classes_names: ['car', 'car', 'car', 'peple']\n",
+      " - classes_ids: [0, 0, 0, 1]\n",
+      " - point_list: [[134.18, 1032.9, 140.3, 1011.74, 163.69, 975.55, 201, 942.14, 237.75, 915.41, 345.22, 915.97, 385.86, 947.15, 400.34, 995.59, 397.56, 1038.47, 386.98, 1042.92, 364.15, 1034.01, 335.75, 1042.37, 327.95, 1061.86, 312.92, 1065.2, 282.85, 1047.93, 180, 1052.6, 140.2, 1067.3], [603.02, 943.19, 608.05, 919.6, 628.15, 893.31, 676.88, 892.53, 693.12, 899.11, 715.93, 895.63, 740.68, 887.12, 766.2, 888.28, 787.08, 882.09, 802.94, 882.09, 806.8, 873.97, 813.38, 864.69, 828.46, 867.78, 829.23, 881.32, 824.98, 891.76, 768.13, 922.69, 632.02, 951.31], [868.29, 913.03, 877.57, 896.01, 910.44, 895.63, 917.4, 916.51, 916.62, 931.2, 867.13, 934.29], [1030.37, 890.47, 1048.63, 885.63, 1056.69, 924.3, 1030.37, 936.39, 1027.15, 914.64]]\n",
+      "\n",
+      "ImageElement info:\n",
+      " - path_image_initial: COCO_dataset\\images\\5.jpg\n",
+      " - path_label_initial: COCO_dataset\\annotations\\instances_Validation.json\n",
+      " - img_width: 3998\n",
+      " - img_height: 2666\n",
+      " - image_id: 5\n",
+      " - type_data: validation\n",
+      " - path_label_final: YOLO_dataset\\validation\\labels\\5_jpg.png\n",
+      " - path_image_final: YOLO_dataset\\validation\\images\\5_jpg.png\n",
+      " - classes_names: ['peple', 'peple', 'peple', 'peple']\n",
+      " - classes_ids: [1, 1, 1, 1]\n",
+      " - point_list: [[1581.86, 2002.36, 1573.86, 1885.55, 1732.27, 1842.35, 2146.68, 1859.95, 2167.49, 1967.16, 1941.88, 1971.96], [2258.69, 2010.36, 2273.09, 1867.95, 2335.49, 1861.55, 2329.09, 2037.56], [2533.74, 2147.32, 2530.54, 1840.11, 2618.54, 1848.11, 2637.75, 2171.33], [2733.75, 2099.32, 2714.55, 1881.71, 2648.95, 1878.51, 2655.35, 2088.12]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Проверяем наличие датасета\n",
+    "if not os.path.exists(coco_dataset_path):\n",
+    "    raise FileNotFoundError(f\"Папка с COCO датасетом '{coco_images_path}' не найдена. \")\n",
+    "\n",
+    "\n",
+    "# Проверяем наличие папки с изображениями\n",
+    "if not os.path.exists(coco_images_path):\n",
+    "    raise FileNotFoundError(f\"Папка с изображениями '{coco_images_path}' не найдена. \"\n",
+    "                            f\"Убедитесь, что вы загрузили разметку COCO так, чтобы имелась папка со всеми изображениями.\")\n",
+    "\n",
+    "# Проверяем, существует ли папка annotations\n",
+    "if not os.path.exists(coco_annotations_path):\n",
+    "    raise FileNotFoundError(f\"Папка с json файлами '{coco_annotations_path}' не найдена.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "list_of_image_elements = []\n",
+    "\n",
+    "# Получаем список всех файлов в папке annotations\n",
+    "annotation_files = os.listdir(coco_annotations_path)\n",
+    "\n",
+    "# Проходим по файлам аннотаций\n",
+    "for annotation_file in annotation_files:\n",
+    "    # Парсим название файла изображения из файла аннотации\n",
+    "    type_data = os.path.splitext(annotation_file)[0].split('_')[-1]\n",
+    "    json_file_path = os.path.join(coco_annotations_path, annotation_file) # путь к json файлу\n",
+    "\n",
+    "    # открытие coco json\n",
+    "    with open(json_file_path, 'r') as f:\n",
+    "        coco_data = json.load(f)\n",
+    "\n",
+    "    # Получаем список изображений из JSON\n",
+    "    images = coco_data['images']\n",
+    "\n",
+    "    # Создаем словарь с информацией о классах\n",
+    "    coco_categories = coco_data['categories']\n",
+    "    categories_dict = {category['id']-1: category['name'] for category in coco_categories}\n",
+    "\n",
+    "    # Выводим информацию\n",
+    "    if print_info:\n",
+    "            print(f'Осуществляется обработка {annotation_file}')\n",
+    "            print(f'Имеющиеся классы: {categories_dict}')\n",
+    "            print('-----------------\\n')\n",
+    "\n",
+    "    #### Дополнительная прверка на наличие всех файлов изображений\n",
+    "    # Получаем список файлов изображений, для которых есть разметка в COCO\n",
+    "    annotated_images = set([entry['file_name'] for entry in coco_data['images']])\n",
+    "\n",
+    "    # Получаем список файлов в папке с изображениями\n",
+    "    all_images = set(os.listdir(coco_images_path))\n",
+    "\n",
+    "    # Проверяем, что все изображения из COCO размечены\n",
+    "    if not annotated_images.issubset(all_images):\n",
+    "        missing_images = annotated_images - all_images\n",
+    "        raise FileNotFoundError(f\"Некоторые изображения, для которых есть разметка в {json_file_path}, отсутствуют в папке с изображениями. \"\n",
+    "                                f\"Отсутствующие изображения: {missing_images}\")\n",
+    "        \n",
+    "    # Проходим по изображениям и считываем аннотации\n",
+    "    for image in images:\n",
+    "        image_id = image['id']\n",
+    "        file_name = image['file_name']\n",
+    "        path_image_initial = os.path.join(coco_images_path, file_name)\n",
+    "        \n",
+    "        # Находим соответствующие аннотации для изображения\n",
+    "        list_of_lists_annotations = [ann['segmentation'] for ann in coco_data['annotations'] if ann['image_id'] == image_id]\n",
+    "        annotations = [sublist[0] for sublist in list_of_lists_annotations]\n",
+    "        classes = [ann['category_id']-1 for ann in coco_data['annotations'] if ann['image_id'] == image_id]\n",
+    "\n",
+    "        # Создаем объект класса ImageElement:\n",
+    "        element = ImageElement(\n",
+    "                path_image_initial=path_image_initial,\n",
+    "                path_label_initial=json_file_path,\n",
+    "                img_width=image['width'],\n",
+    "                img_height=image['height'],\n",
+    "                image_id=image_id,\n",
+    "                type_data=type_data.lower(),\n",
+    "                path_label_final=os.path.join(yolo_dataset_path, type_data.lower(),\n",
+    "                                            'labels', file_name.replace('.', '_')+'.png'),\n",
+    "                path_image_final=os.path.join(yolo_dataset_path, type_data.lower(),\n",
+    "                                            'images', file_name.replace('.', '_')+'.png'),\n",
+    "                classes_names=[categories_dict[cl] for cl in classes],\n",
+    "                classes_ids=classes,\n",
+    "                point_list=annotations,\n",
+    "                )\n",
+    "        list_of_image_elements.append(element)\n",
+    "\n",
+    "        # Вывод информации при необходимости\n",
+    "        if print_info:\n",
+    "            print(element)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
