FIX обработка COCO датасета

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -32,30 +32,43 @@
       "-----------------\n",
       "\n",
       "ImageElement info:\n",
-      " - path_image_initial: COCO_dataset\\images\\4.jpg\n",
+      " - path_image_initial: COCO_dataset\\images\\1.jpg\n",
       " - path_label_initial: COCO_dataset\\annotations\\instances_Train.json\n",
-      " - img_width: 2000\n",
-      " - img_height: 1336\n",
-      " - image_id: 4\n",
+      " - img_width: 2048\n",
+      " - img_height: 1330\n",
+      " - image_id: 1\n",
       " - type_data: train\n",
-      " - path_label_final: YOLO_dataset\\train\\labels\\4_jpg.png\n",
-      " - path_image_final: YOLO_dataset\\train\\images\\4_jpg.png\n",
-      " - classes_names: ['car', 'car', 'car', 'peple']\n",
-      " - classes_ids: [0, 0, 0, 1]\n",
-      " - point_list: [[134.18, 1032.9, 140.3, 1011.74, 163.69, 975.55, 201, 942.14, 237.75, 915.41, 345.22, 915.97, 385.86, 947.15, 400.34, 995.59, 397.56, 1038.47, 386.98, 1042.92, 364.15, 1034.01, 335.75, 1042.37, 327.95, 1061.86, 312.92, 1065.2, 282.85, 1047.93, 180, 1052.6, 140.2, 1067.3], [603.02, 943.19, 608.05, 919.6, 628.15, 893.31, 676.88, 892.53, 693.12, 899.11, 715.93, 895.63, 740.68, 887.12, 766.2, 888.28, 787.08, 882.09, 802.94, 882.09, 806.8, 873.97, 813.38, 864.69, 828.46, 867.78, 829.23, 881.32, 824.98, 891.76, 768.13, 922.69, 632.02, 951.31], [868.29, 913.03, 877.57, 896.01, 910.44, 895.63, 917.4, 916.51, 916.62, 931.2, 867.13, 934.29], [1030.37, 890.47, 1048.63, 885.63, 1056.69, 924.3, 1030.37, 936.39, 1027.15, 914.64]]\n",
+      " - path_label_final: YOLO_dataset\\train\\labels\\1.txt\n",
+      " - path_image_final: YOLO_dataset\\train\\images\\1.jpg\n",
+      " - classes_names: []\n",
+      " - classes_ids: []\n",
+      " - point_list: []\n",
       "\n",
       "ImageElement info:\n",
-      " - path_image_initial: COCO_dataset\\images\\5.jpg\n",
+      " - path_image_initial: COCO_dataset\\images\\2.jpg\n",
       " - path_label_initial: COCO_dataset\\annotations\\instances_Train.json\n",
-      " - img_width: 3998\n",
-      " - img_height: 2666\n",
-      " - image_id: 5\n",
+      " - img_width: 1100\n",
+      " - img_height: 733\n",
+      " - image_id: 2\n",
       " - type_data: train\n",
-      " - path_label_final: YOLO_dataset\\train\\labels\\5_jpg.png\n",
-      " - path_image_final: YOLO_dataset\\train\\images\\5_jpg.png\n",
-      " - classes_names: ['peple', 'peple', 'peple', 'peple']\n",
-      " - classes_ids: [1, 1, 1, 1]\n",
-      " - point_list: [[1581.86, 2002.36, 1573.86, 1885.55, 1732.27, 1842.35, 2146.68, 1859.95, 2167.49, 1967.16, 1941.88, 1971.96], [2258.69, 2010.36, 2273.09, 1867.95, 2335.49, 1861.55, 2329.09, 2037.56], [2533.74, 2147.32, 2530.54, 1840.11, 2618.54, 1848.11, 2637.75, 2171.33], [2733.75, 2099.32, 2714.55, 1881.71, 2648.95, 1878.51, 2655.35, 2088.12]]\n",
+      " - path_label_final: YOLO_dataset\\train\\labels\\2.txt\n",
+      " - path_image_final: YOLO_dataset\\train\\images\\2.jpg\n",
+      " - classes_names: ['peple', 'peple', 'car', 'car']\n",
+      " - classes_ids: [1, 1, 0, 0]\n",
+      " - point_list: [[660.99, 438.73, 636.03, 366.48, 639.98, 352.03, 692.52, 358.6, 696.46, 443.98], [747.69, 546.84, 738.5, 369.5, 886.94, 348.48, 1082.67, 355.05, 1100.0, 455.81, 1100.0, 478.51, 1055.08, 494.3, 1018.3, 578.37, 972.32, 483.79, 883.0, 439.12, 793.67, 439.12, 780.53, 561.29], [581.39, 362.01, 541.98, 422.44, 538.04, 471.04, 654.95, 484.18, 660.21, 402.74, 615.54, 363.33], [167.07, 412.85, 139.49, 397.09, 151.31, 360.31, 548.02, 339.29, 591.37, 366.87, 474.46, 402.34, 398.27, 441.75, 310.26, 441.75]]\n",
+      "\n",
+      "ImageElement info:\n",
+      " - path_image_initial: COCO_dataset\\images\\3.jpg\n",
+      " - path_label_initial: COCO_dataset\\annotations\\instances_Train.json\n",
+      " - img_width: 4120\n",
+      " - img_height: 2837\n",
+      " - image_id: 3\n",
+      " - type_data: train\n",
+      " - path_label_final: YOLO_dataset\\train\\labels\\3.txt\n",
+      " - path_image_final: YOLO_dataset\\train\\images\\3.jpg\n",
+      " - classes_names: ['car', 'car', 'peple', 'peple', 'peple']\n",
+      " - classes_ids: [0, 0, 1, 1, 1]\n",
+      " - point_list: [[2566.54, 1787.89, 2729.99, 1794.7, 2939.43, 1743.62, 2932.62, 1610.81, 2712.97, 1590.38, 2564.83, 1609.11], [2988.8, 1740.22, 2987.1, 1706.16, 3062.02, 1682.32, 3073.94, 1709.57, 3043.29, 1752.13], [2148.18, 1811.05, 2166.91, 1671.43, 2539.8, 1666.32, 2550.02, 1787.21], [2787.89, 2080.76, 2762.35, 1614.22, 2852.59, 1593.78, 2890.05, 1738.51, 2895.16, 1859.4, 2861.1, 2051.81], [3065.43, 1917.3, 3036.48, 1757.24, 3087.56, 1702.76, 3251.02, 1675.51, 3489.4, 1665.3, 3526.86, 1798.11, 3424.7, 1953.05, 3279.97, 1939.43]]\n",
       "\n",
       "Осуществляется обработка instances_Validation.json\n",
       "Имеющиеся классы: {0: 'car', 1: 'peple'}\n",
@@ -68,11 +81,11 @@
       " - img_height: 1336\n",
       " - image_id: 4\n",
       " - type_data: validation\n",
-      " - path_label_final: YOLO_dataset\\validation\\labels\\4_jpg.png\n",
-      " - path_image_final: YOLO_dataset\\validation\\images\\4_jpg.png\n",
+      " - path_label_final: YOLO_dataset\\validation\\labels\\4.txt\n",
+      " - path_image_final: YOLO_dataset\\validation\\images\\4.jpg\n",
       " - classes_names: ['car', 'car', 'car', 'peple']\n",
       " - classes_ids: [0, 0, 0, 1]\n",
-      " - point_list: [[134.18, 1032.9, 140.3, 1011.74, 163.69, 975.55, 201, 942.14, 237.75, 915.41, 345.22, 915.97, 385.86, 947.15, 400.34, 995.59, 397.56, 1038.47, 386.98, 1042.92, 364.15, 1034.01, 335.75, 1042.37, 327.95, 1061.86, 312.92, 1065.2, 282.85, 1047.93, 180, 1052.6, 140.2, 1067.3], [603.02, 943.19, 608.05, 919.6, 628.15, 893.31, 676.88, 892.53, 693.12, 899.11, 715.93, 895.63, 740.68, 887.12, 766.2, 888.28, 787.08, 882.09, 802.94, 882.09, 806.8, 873.97, 813.38, 864.69, 828.46, 867.78, 829.23, 881.32, 824.98, 891.76, 768.13, 922.69, 632.02, 951.31], [868.29, 913.03, 877.57, 896.01, 910.44, 895.63, 917.4, 916.51, 916.62, 931.2, 867.13, 934.29], [1030.37, 890.47, 1048.63, 885.63, 1056.69, 924.3, 1030.37, 936.39, 1027.15, 914.64]]\n",
+      " - point_list: [[134.18, 1032.9, 140.3, 1011.74, 163.69, 975.55, 201.0, 942.14, 237.75, 915.41, 345.22, 915.97, 385.86, 947.15, 400.34, 995.59, 397.56, 1038.47, 386.98, 1042.92, 364.15, 1034.01, 335.75, 1042.37, 327.95, 1061.86, 312.92, 1065.2, 282.85, 1047.93, 180.0, 1052.6, 140.2, 1067.3], [603.02, 943.19, 608.05, 919.6, 628.15, 893.31, 676.88, 892.53, 693.12, 899.11, 715.93, 895.63, 740.68, 887.12, 766.2, 888.28, 787.08, 882.09, 802.94, 882.09, 806.8, 873.97, 813.38, 864.69, 828.46, 867.78, 829.23, 881.32, 824.98, 891.76, 768.13, 922.69, 632.02, 951.31], [868.29, 913.03, 877.57, 896.01, 910.44, 895.63, 917.4, 916.51, 916.62, 931.2, 867.13, 934.29], [1030.37, 890.47, 1048.63, 885.63, 1056.69, 924.3, 1030.37, 936.39, 1027.15, 914.64]]\n",
       "\n",
       "ImageElement info:\n",
       " - path_image_initial: COCO_dataset\\images\\5.jpg\n",
@@ -81,8 +94,8 @@
       " - img_height: 2666\n",
       " - image_id: 5\n",
       " - type_data: validation\n",
-      " - path_label_final: YOLO_dataset\\validation\\labels\\5_jpg.png\n",
-      " - path_image_final: YOLO_dataset\\validation\\images\\5_jpg.png\n",
+      " - path_label_final: YOLO_dataset\\validation\\labels\\5.txt\n",
+      " - path_image_final: YOLO_dataset\\validation\\images\\5.jpg\n",
       " - classes_names: ['peple', 'peple', 'peple', 'peple']\n",
       " - classes_ids: [1, 1, 1, 1]\n",
       " - point_list: [[1581.86, 2002.36, 1573.86, 1885.55, 1732.27, 1842.35, 2146.68, 1859.95, 2167.49, 1967.16, 1941.88, 1971.96], [2258.69, 2010.36, 2273.09, 1867.95, 2335.49, 1861.55, 2329.09, 2037.56], [2533.74, 2147.32, 2530.54, 1840.11, 2618.54, 1848.11, 2637.75, 2171.33], [2733.75, 2099.32, 2714.55, 1881.71, 2648.95, 1878.51, 2655.35, 2088.12]]\n",
@@ -108,6 +121,7 @@
     "\n",
     "\n",
     "list_of_image_elements = []\n",
+    "list_of_images_path = []\n",
     "\n",
     "# Получаем список всех файлов в папке annotations\n",
     "annotation_files = os.listdir(coco_annotations_path)\n",
@@ -168,19 +182,49 @@
     "                image_id=image_id,\n",
     "                type_data=type_data.lower(),\n",
     "                path_label_final=os.path.join(yolo_dataset_path, type_data.lower(),\n",
-    "                                            'labels', file_name.replace('.', '_')+'.png'),\n",
+    "                                            'labels', os.path.splitext(file_name)[0]+'.txt'),\n",
     "                path_image_final=os.path.join(yolo_dataset_path, type_data.lower(),\n",
-    "                                            'images', file_name.replace('.', '_')+'.png'),\n",
+    "                                            'images', file_name),\n",
     "                classes_names=[categories_dict[cl] for cl in classes],\n",
     "                classes_ids=classes,\n",
     "                point_list=annotations,\n",
     "                )\n",
     "        list_of_image_elements.append(element)\n",
+    "        list_of_images_path.append(file_name)\n",
     "\n",
-    "        # Вывод информации при необходимости\n",
+    "        # Вывод информации об ImageElement при необходимости\n",
     "        if print_info:\n",
-    "            print(element)\n"
+    "            print(element)\n",
+    "\n",
+    "### Проверка на присутвие всех изображений в папке images \n",
+    "# Получаем список файлов в папке\n",
+    "files_in_folder = set(os.listdir(coco_images_path))\n",
+    "\n",
+    "# Проверяем, что все файлы из списка присутствуют в папке\n",
+    "missing_files = set(list_of_images_path) - files_in_folder\n",
+    "extra_files = files_in_folder - set(list_of_images_path)\n",
+    "\n",
+    "# Выводим уведомление\n",
+    "if missing_files:\n",
+    "    print(f\"Отсутствующие файлы в папке {coco_images_path}: {missing_files}\")\n",
+    "\n",
+    "if extra_files:\n",
+    "    print(f\"Лишние файлы в папке {coco_images_path}: {extra_files}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
