рабочий вариант кода с предопределенным разбиением

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import yaml\n",
     "import json\n",
+    "import shutil\n",
     "from ImageElement import *\n",
     "\n",
     "print_info = True\n",
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +134,12 @@
     "    type_data = os.path.splitext(annotation_file)[0].split('_')[-1]\n",
     "    json_file_path = os.path.join(coco_annotations_path, annotation_file) # путь к json файлу\n",
     "\n",
+    "    # Создаем папку, если ее нет, и удаляем все содержимое, если она есть\n",
+    "    for folder_path in ['images', 'labels']:\n",
+    "        path_create=os.path.join(yolo_dataset_path, type_data.lower(), folder_path)\n",
+    "        shutil.rmtree(path_create, ignore_errors=True)\n",
+    "        os.makedirs(path_create, exist_ok=True)\n",
+    "\n",
     "    # открытие coco json\n",
     "    with open(json_file_path, 'r') as f:\n",
     "        coco_data = json.load(f)\n",
@@ -214,10 +222,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Создаем структуру данных для записи в data.yaml\n",
+    "data_dict = {\n",
+    "    'names': list(categories_dict.values()),\n",
+    "    'nc': len(categories_dict),\n",
+    "    'test': f'{yolo_dataset_path}/test/images',\n",
+    "    'train': f'{yolo_dataset_path}/train/images',\n",
+    "    'val': f'{yolo_dataset_path}/validation/images'\n",
+    "}\n",
+    "\n",
+    "# Путь к файлу data.yaml\n",
+    "data_yaml_path = f\"{yolo_dataset_path}/data.yaml\"  \n",
+    "\n",
+    "# Записываем данные в файл data.yaml\n",
+    "with open(data_yaml_path, 'w') as file:\n",
+    "    yaml.dump(data_dict, file, default_flow_style=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Итоговая разметка в формате YOLOv8 расположена в папке - YOLO_dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for element in list_of_image_elements:\n",
+    "    # Копирование изображения\n",
+    "    shutil.copy(element.path_image_initial, element.path_image_final)\n",
+    "\n",
+    "    # Создание файла с разметкой YOLO\n",
+    "    with open(element.path_label_final, 'w') as yolo_label_file:\n",
+    "        for i in range(len(element.classes_ids)):\n",
+    "            class_id = element.classes_ids[i]\n",
+    "            class_name = element.classes_names[i]\n",
+    "            points = element.point_list[i]\n",
+    "            output_string = f'{class_id}'\n",
+    "\n",
+    "            for i, point in enumerate(points):\n",
+    "\n",
+    "                if i % 2 == 0:\n",
+    "                    result = round(point / element.img_width, 9)\n",
+    "                else:\n",
+    "                    result = round(point / element.img_height, 9)\n",
+    "                output_string += f' {result:.6f}'\n",
+    "            # Запись данных в файл\n",
+    "            yolo_label_file.write(output_string+'\\n')\n",
+    "                \n",
+    "\n",
+    "print(f\"Итоговая разметка в формате YOLOv8 расположена в папке - {yolo_dataset_path}.\")\n"
+   ]
   },
   {
    "cell_type": "code",
